assets/css/responsive.css
/* ... */
/* small mobile :600px. */
@media only screen and (min-width: 600px) and (max-width: 767px) {
  .sticky {
    position: absolute !important;
  }
  .topber_area {
    display: none;
  }
  .meedy_nav_manu {
    display: none;
  }

  /* Hero Section */
  .hero-section {
    background: linear-gradient(rgba(4, 28, 51, 0.72), rgba(4, 28, 51, 0.72)), url(../images/assets-oakspecialisthospital/JPG/oakfrontview.jpeg) !important;
    background-position: center center !important;
    background-repeat: no-repeat !important;
    background-size: cover !important;
    height: auto !important;
    padding: 130px 0 80px !important;
  }

  .hero-content {
    margin-top: 0 !important;
    margin-bottom: 0 !important;
    text-align: center !important;
  }

  .hero-content h1 {
    font-size: 32px !important;
    line-height: 42px !important;
  }

  .hero-content p {
    font-size: 15px !important;
    line-height: 25px !important;
    margin: 15px 0 25px !important;
  }

  .hero-thumb {
    display: none !important;
  }

  .hero-socail-icon {
    display: none;
  }
  .hero-btm-boxs {
    display: flex !important;
    flex-wrap: wrap !important;
    gap: 20px !important;
    align-items: center !important;
    justify-content: center !important;
    margin-top: 30px !important;
  }
  .hero-btm-boxs:before {
    display: none !important;
  }

  .mediket-section-title h1 {
    font-size: 26px;
}

.service-section {
  padding: 90px 0 70px;
}

.why-choose-us-serction {
  padding: 90px 0 100px;
}
.contact-with-mediket {
  top: 0;
}
.case_item_left_side {
  padding: 0;
  margin-bottom: 30px;
}
.case_list .owl-nav {
  display: none;
}
.case_study_sextion {
  background: #041c33;
  padding: 100px 25px 90px 25px;
}
.case_study_sextion .counter-single-box {
  display: none;
}
.team-section {
  padding: 90px 0 70px;
}
.team-section .text-right {
  margin-top: 40px;
  text-align: left !important;
}
.subscribe-title h1 {
  font-size: 25px;
}
.subscribe_right_side {
  margin: 21px 0 0;
}
.appoinment-section {
  padding: 100px 48px 100px;
}
.contact-form-box {
  padding: 67px 30px 84px;
  margin-top: 30px;
}

.testimonial-section {
  padding: 100px 0 95px;
}
.testi-thumb {
  bottom: 0;
  margin-bottom: 30px;
}

.blog-section {
  padding: 90px 0 60px;
}
.mediket-btn.text-right {
  text-align: left !important;
  margin: 25px 0 0;
}
.brand-section {
  padding: 0 0 95px;
}
.footer_title h2 {
  font-size: 17px;
}

.footer-bottom-menu.text-right {
  text-align: left !important;
}
.footer-section:before {
  bottom: 112px;
}
.footer-thumb1 {
  bottom: 113px;
  right: 9px;
}



/* ================================
Start Home Two 
=================================== */

.about-serction.style-2 {
  padding: 100px 0 100px;
}
.about-serction.style-2 .about_right_side {
  margin-left: 0;
}
.about-serction.style-2 .about-thumb.right_side {
  margin-top: 19px;
  margin-left: 0;
}
.about-thumb img {
  width: 100%;
}
.about-serction.style-2 .mediket-section-title.home-2 h1 {
  font-size: 29px;
  line-height: 46px;
}
.style-2.about-serction .mediket-section-title p {
  width: 99%;
}

.service-section.style-2 {
  padding: 87px 14px 70px;
}
.team-section.style-2 {
  padding: 90px 0 25px;
}
.testimonial-section.style-2 {
  padding: 87px 0 100px;
}
.testimonal-thumb {
  display: none;
}
.testimonial-section.style-2 .mediket-section-title {
  margin-left: 0;
}
.testi_main_bx {
  margin-left: 0;
}
.boxed {
  width: calc(100% - 45px);
  margin: 0 26px;
}
.marquee-section.style-2 {
  padding: 25px 0 96px;
}
.pricing-section {
  padding: 90px 0 70px;
}
.service-section.style-3 {
  padding: 90px 20px 70px;
}







  /******************************
  <--Inner Page Section-->  
  ********************************/
  .breatcome-section {
    background-size: cover;
    margin-top: 0;
  }

  .breatcome-content h1 {
    font-size: 50px;
  }

  /* About Section */
  .style-3.about-section .about-thumb img {
    padding: 0;
  }

  .style-3.about-section .about-thumb {
    padding-bottom: 30px;
  }

  .style-3 .counter-right-side {
    width: auto;
  }

  /* Details Page  */

  

  /* Error Page */
  .error-section {
    padding: 90px 0px 90px;
  }

  .error-content h1 {
    font-size: 160px;
    width: 460px;
    height: 259px;
  }

  /* Appoinment Section */

  .style-1 .testi-single-box {
    margin-bottom: 35px;
  }

  .mediket-thumb img {
    width: 100%;
  }

  iframe {
    width: 600px;
  }

  /* Testimonial inner Page */

  .upp.style-2 .testi-single-box {
    padding: 58px 35px 38px;
  }

  .upp.style-2 .testi-bg .user-info {
    padding: 0;
    margin: 30px 12px 0 0;
  }

  .upp.style-2 .user-info {
    padding: 25px 15px 25px 1px;
    margin: 0px 10px 0 0;
  }

  .upp.style-2 .user-name h4 {
    font-size: 20px;
  }

  .people-pic img {
    margin-right: 0;
    width: 62%;
  }

  .upp.style-2 .testi-desc p {
    font-size: 18px;
  }
  .team-details-area {
    padding: 100px 0 100px;
}
.style-2.contact-with-mediket {
  top: 0;
}
.faq-section .tab_container {
  padding: 5px 0 60px;
}
.blog-single-box.blog_lists {
  display: block;
}
.blog-details-comment.reply {
  margin-left: 0;
}
.comment-bx {
  padding: 47px 30px 60px;
}
.blog-details-thumb {
  margin-bottom: 30px;
}
p.desc-style1 {
  margin-right: 0;
}
.contact-service-box:before {
  display: none;
}
.footer-bottom-menu ul li {
  margin-left: 0;
  padding-right: 10px;
  margin-top: 10px;
}
.service-section.style-3 .mediket-section-title.home-2 {
  padding-left: 0;
}
.mediket-section-title.home-2 h1 {
  font-size: 30px;
}







  /*  */
}
/* ... */

